[package]
name = "cch23-santa5655"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "query"] }
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = "1.28.2"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.13"
