[package]
name = "cch23-santa5655"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "query", "multipart"] }
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
shuttle-shared-db = { version = "0.48", features = ["postgres", "sqlx"] }
tokio = "1.28.2"
tracing = "0.1"
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.13"
regex = "1.10"
base64 = "0.22"
rustemon = { version = "3.5", default-features = false, features = ["in-memory-cache"] }
image = "0.25"
ulid = { version = "1.1", features = ["serde"] }
uuid = { version = "1.10", features = ["serde"] }
chrono = "0.4"
sqlx = "0.8"
